# groww-mf-rag-assistant

./: .env.example  .gitignore  Dockerfile  README.md  list_models.py  pyproject.toml  render.yaml  requirements.txt  test_retrieval.py
.github/workflows/: refresh.yml
config/: amc.yaml  refusal_links.yaml  scheme_aliases.yaml  sources.yaml
data/: url_registry.csv
docs/: architecture.md  complianceRules.md  phaseWiseArchitecture.md  problemStatement.md  sample_questions.md
docs/edge-cases/: README.md  phase0-edge-cases.md  phase1-edge-cases.md  phase2-edge-cases.md  phase3-edge-cases.md  phase4-edge-cases.md  phase5-edge-cases.md  phase6-edge-cases.md  phase7-edge-cases.md  phase8-edge-cases.md
eval/: golden_queries.jsonl
src/: __init__.py
src/api/: __init__.py  main.py  schema.py
src/foundation/: __init__.py  __main__.py  allowlist.py  loader.py  models.py  validate.py  validators.py
src/generation/: __init__.py  generator.py
src/guardrails/: __init__.py  scanner.py
src/index/: __init__.py
src/ingest/: __init__.py  __main__.py  registry.py
src/ingest/subphases/: __init__.py
src/mf_faq/ingestion/: cleaner.py  embedder.py  extractor.py  fetcher.py  indexer.py  refresh.py
src/retrieval/: __init__.py  models.py  retriever.py
tests/: test_generation.py  test_phase0.py  test_phase1_1_registry.py  test_phase1_2_extractor.py  test_phase1_3_cleaner.py  test_phase1_4_chunker.py  test_phase1_5_embedder.py  test_phase1_6_indexer.py  test_retrieval.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  index.css
(+24 files in other folders)
